compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class E01
^^^^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/common.kt:2:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class E02
^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:3:1: error: right-hand side of actual type alias cannot be of type kotlin.Nothing
actual typealias E01 = Nothing
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:3:18: error: 'actual typealias E01 = Nothing' has no corresponding members for expected class members:

    fun equals(other: Any?): Boolean

    fun hashCode(): Int

    fun toString(): String

actual typealias E01 = Nothing
                 ^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:4:1: error: right-hand side of actual type alias should be a class, not another type alias.
actual typealias E02 = MyNothing
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/implTypeAlias/actualTypealiasToNothing/jvm.kt:4:18: error: 'actual typealias E02 = Nothing' has no corresponding members for expected class members:

    fun equals(other: Any?): Boolean

    fun hashCode(): Int

    fun toString(): String

actual typealias E02 = MyNothing
                 ^^^
